--- a/index.html
+++ b/index.html
@@ -50,63 +50,79 @@
 					<div class="row">
 
 						<div class="skills">
-							<i class="devicon-python-plain skill"></i>
+							<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/python/python-original.svg" class="resize-devicon"/>
 							<p>Python</p>
 						</div>
 						<div class="skills">
-							<i class="devicon-javascript-plain skill"></i>
+							<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" class="resize-devicon" />
 							<p>Javascript</p>
 						</div>
 						<div class="skills">
-							<i class="devicon-react-original skill"></i>
+							<i class="devicon-react-original colored skill"></i>
 							<p>React</p>
 						</div>
 						<div class="skills">
-							<i class="devicon-redux-plain skill"></i>
+							<i class="devicon-redux-plain colored skill"></i>
 							<p>Redux</p>
 						</div>
 						<div class="skills">
-							<i class="devicon-nodejs-plain skill"></i>
+							<i class="devicon-nodejs-plain colored skill"></i>
 							<p>Node</p>
 						</div>
 						<div class="skills">
-							<i class="devicon-html5-plain skill"></i>
+							<i class="devicon-html5-plain colored skill"></i>
 							<p>HTML5</p>
 						</div>
 						<div class="skills">
-							<i class="devicon-css3-plain skill"></i>
+							<i class="devicon-css3-plain colored skill"></i>
 							<p>CSS3</p>
 						</div>
 						<div class="skills">
-							<i class="devicon-sequelize-plain skill"></i>
+							<i class="devicon-sequelize-plain colored skill"></i>
 							<p>Sequelize</p>
 						</div>
 						<div class="skills">
-							<i class="devicon-postgresql-plain skill"></i>
+							<i class="devicon-postgresql-plain colored skill"></i>
 							<p>PostgreSQL</p>
 						</div>
 						<div class="skills">
-							<i class="devicon-sqlalchemy-plain skill"></i>
+							<i class="devicon-sqlalchemy-plain colored skill"></i>
 							<p>SQLAlchemy</p>
 						</div>
 						<div class="skills">
-							<i class="devicon-flask-plain skill"></i>
+							<i class="devicon-flask-plain colored skill"></i>
 							<p>Flask</p>
 						</div>
 						<div class="skills">
-							<i class="devicon-express-original skill"></i>
+							<i class="devicon-express-original colored skill"></i>
 							<p>Express</p>
 						</div>
 						<div class="skills">
-							<i class="devicon-git-plain skill"></i>
+							<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/sqlite/sqlite-original.svg" class="resize-devicon" />
+							<p>SQLite3</p>
+						</div>
+						<div class="skills">
+							<i class="devicon-git-plain colored skill"></i>
 							<p>Git</p>
 						</div>
 						<div class="skills">
-							<i class="devicon-github-original skill"></i>
+							<i class="devicon-github-original colored skill"></i>
 							<p>Github</p>
 						</div>
 						<div class="skills">
-							<i class="devicon-google-plain skill"></i>
+							<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/mocha/mocha-plain.svg" class="resize-devicon"/>
+							<p>Mocha</p>
+						</div>
+						<div class="skills">
+							<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/npm/npm-original-wordmark.svg" class="resize-devicon"/>
+							<p>NPM</p>
+						</div>
+						<div class="skills">
+							<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/vscode/vscode-original.svg" class="resize-devicon"/>
+							<p>VS Code</p>
+						</div>
+						<div class="skills">
+							<i class="devicon-google-plain colored skill"></i>
 							<p>Google</p>
 						</div>
 					</div>
