CSS Styling and About Me

--- a/index.html
+++ b/index.html
@@ -34,10 +34,13 @@
 						<header class="major">
 							<h2>Welcome to my Portfolio!</h2>
 						</header>
-						<p>I developed my skills through App Academy's immersive bootcamp and extensive self-learning while honing my skills through multiple full-stack projects and rigorous coding challenges where I rediscovered my passion for coding.
+						<p>I developed my skills through App Academy's immersive bootcamp and extensive self-learning while honing my skills through multiple full-stack projects and rigorous coding challenges where I rediscovered my passion for coding. I was able to work closely with a diverse group of developers and mentors who helped me refine my skills and push the limits of what I thought was possible.
 						</p>
 						<p>
-							I was first exposed to coding during the MySpace days and have been fascinated with it ever since. As a lifelong learner, I always strive to keep up with the latest technologies and industry best practices.
+							I was first exposed to coding during the MySpace days and have been fascinated with it ever since. As a lifelong learner, one of the things that drew me to coding was the sense of endless possibility it provides. With the right skills and tools, I can bring any idea to life and make a real impact on the world around me. That's why I'm constantly striving to improve my skills and stay up-to-date with the latest industry developments.
+						</p>
+						<p>
+							When I'm not coding, I enjoy staying active through sports and weightlifting. I find that staying active and physically fit helps me stay focused and energized when I'm working on coding projects, I always make sure to prioritize my health and well-being.
 						</p>
 
 						<p>I am excited to bring my passion, experience, and prior education to a technology company. I look forward to continue learning and growing alongside a company as part of the engineering team.</p>
@@ -182,9 +185,9 @@
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article> -->
 						</div>
-						<ul class="actions">
+						<!-- <ul class="actions">
 							<li><a href="#" class="button">Full Portfolio</a></li>
-						</ul>
+						</ul> -->
 					</section>
 
 				<!-- Three -->
