--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 							I was first exposed to coding during the MySpace days and have been fascinated with it ever since. As a lifelong learner, one of the things that drew me to coding was the sense of endless possibility it provides. With the right skills and tools, I can bring any idea to life and make a real impact on the world around me. That's why I'm constantly striving to improve my skills and stay up-to-date with the latest industry developments.
 						</p>
 						<p>
-							When I'm not coding, I enjoy staying active through sports and weightlifting. I find that staying active and physically fit helps me stay focused and energized when I'm working on coding projects, I always make sure to prioritize my health and well-being.
+							When I'm not coding, I enjoy staying active through sports and weightlifting. I find that staying active and physically fit helps me stay focused and energized when I'm working on coding projects. I always make sure to prioritize my health and well-being.
 						</p>
 
 						<p>I am excited to bring my passion, experience, and prior education to a technology company. I look forward to continue learning and growing alongside a company as part of the engineering team.</p>
